--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -311,7 +311,7 @@
   margin-top:30px;
 }
 
-.columns.large.cards ul li::before {
+.columns.large.cards ul:not(:first-of-type) li::before {
   background-image: url("/icons/deco.png");
   background-repeat: no-repeat;
   left: -22px;
