--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -322,22 +322,22 @@
   height: 43px;
 }
 
-/* .columns.large.cards ul li {
+.columns.large.cards ul li {
   background-color: var(--text-white);
   border-radius: 8px;
   margin-bottom: 25px;
   padding: 24px 40px 20px;
   position: relative;
   max-width: 431px;
-} */
+}
 
-/* .columns-container div.columns-wrapper:first-of-type .columns.large.cards ul:nth-of-type(1) li {
+.columns-container div.columns-wrapper:first-of-type .columns.large.cards ul:nth-of-type(1) li {
   margin:0;
   border-radius: 8px;
   padding: 19px 16px;
   margin-bottom: 9px;
   color: var(--text-white);
-} */
+}
 
 .columns-container div.columns-wrapper:first-of-type .columns.large.cards ul:nth-of-type(1) li:nth-of-type(1)::before {
   background-image: none;
