--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,6 +30,13 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+/* fallback font for Open Sans (normal - 400) */
+@font-face {
+  font-family: "open-sans-normal-400-fallback";
+  size-adjust: 104.7%;
+  src: local("Arial");
+}
+
  :root {
   /* colors */
   --link-color: #0074AF;
