--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,7 @@
 }
 
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans 700';
   font-style: normal;
   font-weight: 700;
   font-stretch: 100%;
@@ -33,6 +33,15 @@
 /* fallback font for Open Sans (normal - 400) */
 @font-face {
   font-family: "open-sans-normal-400-fallback";
+  font-weight: 400;
+  size-adjust: 104.7%;
+  src: local("Arial");
+}
+
+/* fallback font for Open Sans Bold (normal - 700) */
+@font-face {
+  font-family: "open-sans-normal-700-fallback";
+  font-weight: 700;
   size-adjust: 104.7%;
   src: local("Arial");
 }
@@ -58,7 +67,7 @@
 
   /* fonts */
   --body-font-family: 'Open Sans', 'open-sans-normal-400-fallback', arial, sans-serif;
-  --heading-font-family: var(--body-font-family);
+  --heading-font-family: 'Open Sans 700', 'open-sans-normal-400-fallback', arial, sans-serif;
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
   /* body sizes */
@@ -136,7 +145,6 @@ header {
 h1, h2, h3,
 h4, h5, h6 {
   font-family: var(--heading-font-family);
-  font-weight: 700;
   line-height: 1.25;
   margin-top: 1em;
   margin-bottom: .5em;
