--- a/styles/styles.css
+++ b/styles/styles.css
@@ -120,7 +120,7 @@
 body {
   font-size: var(--body-font-size-m);
   margin: 0;
-  font-family: var(--body-font-family);
+  /* font-family: var(--body-font-family); */
   line-height: 1.4;
   color: var(--text-color);
   display: none;
