test: revert last test

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,6 +30,22 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+/* fallback font for Open Sans (normal - 400) */
+@font-face {
+  font-family: "open-sans-normal-400-fallback";
+  font-weight: 400;
+  size-adjust: 104.7%;
+  src: local("Arial");
+}
+
+/* fallback font for Open Sans Bold (normal - 700) */
+@font-face {
+  font-family: "open-sans-normal-700-fallback";
+  font-weight: 700;
+  size-adjust: 111.791%;
+  src: local("Arial");
+}
+
  :root {
   /* colors */
   --link-color: #0074AF;
@@ -50,7 +66,7 @@
   --footer-bg-color: #1B1B1B;
 
   /* fonts */
-  --body-font-family: 'Open Sans', arial, sans-serif;
+  --body-font-family: 'Open Sans', 'open-sans-normal-400-fallback', arial, sans-serif;
   --heading-font-family: 'Open Sans 700', arial, sans-serif;
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
